--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "jquery": "^3.6.1",
     "ngx-mask": "^14.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
